--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint ./src",
     "start": "node src/server/index.js",
-    "test": "jest --verbose --testTimeout=30000"
+    "test": "cross-env NODE_ENV=test jest --verbose --testTimeout=30000"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,14 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
     "eslint-plugin-jest": "^24.1.7",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^5.24.2",
     "workbox-webpack-plugin": "^6.1.0"
   },
@@ -41,6 +43,7 @@
     "npm": "^7.5.3",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
     "terser-webpack-plugin": "^5.1.1",
     "webpack-babel-jest": "^1.0.4",
     "webpack-cli": "^4.5.0",
